Removed obsolete notifications option "never hides" (obsolete, because the notification center no longer exists) Updated options style to match new Deezer CSS Fixed broken info update on track change

--- a/css/line/popup.css
+++ b/css/line/popup.css
@@ -64,4 +64,4 @@
 	left: -5px;
 }
 
-#shadow_top, #shadow_bottom { display: none; }
+#shadow_bottom { display: none; }
