--- a/css/popup.css
+++ b/css/popup.css
@@ -28,7 +28,6 @@ div.controls-right { float: right; }
 
 #now_playing
 {
-	font-weight: bold;
 	position: absolute;
 	vertical-align: baseline;
 }
@@ -41,16 +40,6 @@ div.controls-right { float: right; }
 	width: 100%;
 }
 
-#shadow_top
-{
-	height: 1px;
-    top: 0px;
-	left: 0px;
-	position: absolute;
-	width: 100%;
-	background: rgba(0,0,0,0.1);
-}
-
 #shadow_bottom
 {
     background: -webkit-linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,0.9) 4.6%, rgba(0,0,0,0.8) 9.7%, rgba(0,0,0,0.7) 15.5%, rgba(0,0,0,0.6) 22.2%, rgba(0,0,0,0.5) 30.1%, rgba(0,0,0,0.40) 39.8%, rgba(0,0,0,0.25) 52.3%, rgba(0,0,0,0.1) 69.9%, rgba(0,0,0,0));
@@ -61,7 +50,7 @@ div.controls-right { float: right; }
 #now_playing_info
 {
 	line-height: 1;
-	font-family: Arial,Helvetica,Verdana,sans-serif;
+	font-family: "Open Sans",Arial,sans-serif;
 	text-align: left;
 }
 
@@ -72,14 +61,17 @@ div.controls-right { float: right; }
 	overflow: hidden;
 	text-overflow: ellipsis; 
 	white-space: nowrap;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.65);
     
+}
+
+#now_playing_info_track
+{
+	color: #FFFFFF; 
 }
 	
 #now_playing_info_artist 
-{ 
-	color: #CCCCCC;
-	font-weight: normal;
+{
+	color: #C2C2CA;
 }
 
 #cover 
